# ravenback

./: .gitignore  LICENSE  Pipfile  README.md  Spacefile  checkers.py  main.py  pyproject.toml  requirements.txt  serve.py
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: test-deploy.yml
ai/: games.py  utils.py
game/: checkers.py  gamemanager.py
parsing/: PDN.py
src/: checkers.py  composite.py  controller.py  gamemanager.py  gamepersist.py  globalconst.py  mainframe.py  observer.py  player.py  playercontroller.py  prefdlg.py  setupboard.py  testcb.py  textserialize.py  utils.py
tests/: test_PDN.py  test_api.py  test_migrate.py
training/ElementaryKingEndings/: 2Kings-v-1King-Draw.rcf  3Kings-v-2Kings-SameDblCorner.rcf
training/KeyEndgames/: FirstPositionWithTheManOn4.rcf  FirstPositionWithoutTheOpposition.rcf
training/KeyEndgames/support/: FirstPositionWithTheManOn4_Alternative.rcf  FirstPositionWithoutTheOpposition_Alternative.rcf  FirstPosition_AlternativeA.rcf  FirstPosition_AlternativeB1.rcf  FirstPosition_AlternativeB2.rcf  FirstPosition_AlternativeB3.rcf  FirstPosition_AlternativeC.rcf  FirstPosition_AlternativeD1.rcf  FirstPosition_AlternativeD2.rcf
training/Openings/: Cross.rcf  Glasgow.rcf  SingleCorner.rcf
training/Openings/support/: Cross_WhiteWin.rcf  Glasgow_Alternate1.rcf  Glasgow_BlackWin.rcf  Glasgow_Draw.rcf  SingleCorner_Pask.rcf  SingleCorner_Pask_Variation1.rcf  SingleCorner_Reinfeld_Variation1.rcf
