[project]
name = "Raven"
version = "0.1"
description = "Checkers game engine in Python"
authors = [
    {name = "Brandon Corfman", email = "bcorfman1@gmail.com"},
]
dependencies = [
    "hug>=2.6.1",
    "waitress>=2.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]
cli = [
    "ipython>=8.4.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "playwright>=1.25.1",
    "pytest-playwright>=0.3.0",
]
