[project]
name = "Raven"
version = "0.1"
description = "Checkers game engine in Python"
authors = [
    {name = "Brandon Corfman", email = "bcorfman1@gmail.com"},
]
dependencies = [
    "fastapi>=0.81.0",
    "hypercorn>=0.14.1",
    "trio>=0.21.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]
cli = [
    "ipython>=8.4.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "anyio>=3.6.1",
    "httpx>=0.23.0",
]
